verif/test/deca/codegen/invalid/if/if-not-null-verif.res
src/test/deca/codegen/invalid/if/if-not-null.deca:10:8: Incompatible types for comparison operator '!=' between 'int' and 'null'
